# Taller1-TP-Left4Dead

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  Taller1-TP-Left4Dead.pro  ideas.md
Client/config/: config.yaml
Client/include/: client.h  config_game.h  game.h  handler_event.h  lobby.h  music_game.h  protocol.h  receiver.h  sender.h  visual_game.h
Client/include/Animations/: animation_action.h  animation_actor.h  animation_code.h  animation_loop_type.h  animation_loopable.h  animation_manager.h  animation_no_loopable.h  animation_soldier1.h  sprite_manager.h
Client/include/Animations/Actor/: animation_actor.h  animation_jumper.h  animation_soldier1.h  animation_soldier2.h  animation_soldier3.h  animation_spear.h  animation_venom.h  animation_witch.h  animation_zombie.h
Client/include/Animations/LoopType/: looptype.h  looptype_loopable.h  looptype_no_loopable.h
Client/include/Background/: background_code.h  background_layer.h  background_manager.h  background_war.h  background_war1.h
Client/include/Drawer/: draw_info_dto.h  drawer.h  drawer_actor.h  drawer_animation.h  drawer_background.h  drawer_hpbar.h  drawer_layer.h  drawer_manager.h  drawer_soldier_one.h
Client/src/: client.cpp  config_game.cpp  game.cpp  handler_event.cpp  lobby.cpp  main.cpp  protocol.cpp  receiver.cpp  sender.cpp  visual_game.cpp
Client/src/Animation/: animation_action.cpp  animation_loop_type.cpp  animation_loopable.cpp  animation_manager.cpp  animation_no_loopable.cpp  animation_soldier1.cpp  sprite_manager.cpp
Client/src/Animation/Actor/: animation_jumper.cpp  animation_soldier1.cpp  animation_soldier2.cpp  animation_soldier3.cpp  animation_spear.cpp  animation_venom.cpp  animation_witch.cpp  animation_zombie.cpp
Client/src/Animation/LoopType/: looptype.cpp  looptype_loopable.cpp  looptype_no_loopable.cpp
Client/src/Background/: background_layer.cpp  background_manager.cpp  background_war1.cpp
Client/src/Drawer/: drawer_actor.cpp  drawer_animation.cpp  drawer_background.cpp  drawer_hpbar.cpp  drawer_layer.cpp  drawer_manager.cpp  drawer_soldier_one.cpp
Client/src/LobbyUI/: gameresultwindow.cpp  gameresultwindow.h  gameresultwindow.ui  lobbywindow.cpp  lobbywindow.h  lobbywindow.ui  music_game.cpp  ui_lobbywindow.h
Common/include/: action_code.h  action_dto.h  resolver.h  serializer.h  socket.h
Common/include/Action/: action.h  action_code.h  action_creategame.h  action_dto.h  action_joingame.h  action_startshoot.h
Common/include/Feedback/: feedback_code.h  feedback_server.h  feedback_server_creategame.h  state_player_dto.h
Common/include/GameState/: state_code.h
Common/include/Information/: action_creategame.h  action_joingame.h  action_startshoot.h  feedback_server_creategame.h  feedback_server_gamestate.h  feedback_server_joingame.h  feedback_server_score.h  information.h  information_code.h  score_dto.h  state_dto_element.h
Common/include/Information/Actions/: change_start.h  exit_start.h  exit_stop.h  game_create.h  game_join.h  moving_down_start.h  moving_down_stop.h  moving_left_start.h  moving_left_stop.h  moving_right_start.h  reload_stop.h  (+10 more)
Common/include/Socket/: socket.h  socket_game.h
Common/src/: action_dto.cpp  resolver.cpp  serializer.cpp  socket.cpp
Common/src/Action/: action.cpp  action_creategame.cpp  action_dto.cpp  action_joingame.cpp  action_startshoot.cpp
Common/src/Feedback/: feedback_server.cpp  feedback_server_creategame.cpp
Common/src/Information/: action_creategame.cpp  action_joingame.cpp  action_startshoot.cpp  feedback_server_creategame.cpp  feedback_server_gamestate.cpp  feedback_server_joingame.cpp  feedback_server_score.cpp  information.cpp
Common/src/Socket/: socket_game.cpp
Server/config/: config.yaml  score.yaml  soldier.yaml  throwable.yaml  weapon.yaml  zombie.yaml
Server/include/: accepter.h  command.h  game.h  game_manager.h  game_state.h  handler.h  protocol.h  receiver.h  sender.h  server.h
Server/include/Command/: command.h  command_ingame.h  command_ingame_pick_soldier.h  command_ingame_startchange.h  command_ingame_startexit.h  command_ingame_startidle.h  command_ingame_startmove.h  command_ingame_startreload.h  command_ingame_startrevive.h  command_ingame_startshoot.h  command_ingame_startthrow.h  command_ingame_stoprevive.h  command_ingame_stopthrow.h  command_pregame.h  command_pregame_creategame.h  command_pregame_joingame.h
Server/include/GameLogic/: clearthezone.h  collisionzone.h  gamemap.h  hitbox.h  match.h  match_configurator.h  position.h  radialhitbox.h  survival.h
Server/src/: accepter.cpp  command.cpp  game.cpp  game_manager.cpp  handler.cpp  main.cpp  protocol.cpp  receiver.cpp  sender.cpp  server.cpp
Server/src/Command/: command.cpp  command_ingame.cpp  command_ingame_pick_soldier.cpp  command_ingame_startchange.cpp  command_ingame_startexit.cpp  command_ingame_startidle.cpp  command_ingame_startmove.cpp  command_ingame_startreload.cpp  command_ingame_startrevive.cpp  command_ingame_startshoot.cpp  command_ingame_startthrow.cpp  command_ingame_stoprevive.cpp  command_ingame_stopthrow.cpp  command_pregame.cpp  command_pregame_creategame.cpp  command_pregame_joingame.cpp
Server/src/GameLogic/: clearthezone.cpp  collisionzone.cpp  gamemap.cpp  hitbox.cpp  match.cpp  match_configurator.cpp  position.cpp  radialhitbox.cpp  survival.cpp
docs/: Features.odt  Informacion Tecnica.odt  animation_classes1.puml  background_classes.puml  background_seq.puml  clientgame_classes1.puml  clientgame_classes2.puml  clientlobby_classes1.puml  clientmain_classes1.puml  clientmain_classes2.puml  draw_process1.puml  draw_process2.puml  drawer_classes1.puml  gamelogic1.puml  gamelogic2.puml  gamelogic3.puml  gamelogic4.puml  servermain_classes1.puml  update_process.puml
libs/: queue.h
libs/libSDL2pp-0.18.1/cmake/: SDL2ppConfig.cmake
tests/: CMakeLists.txt  action_test.cpp  actiondto_test.cpp  collisionzone_test.cpp  command_test.cpp  feedback_test.cpp  gamemanager_test.cpp  gamemap_test.cpp  information_test.cpp  match_test.cpp  resolver_test.cpp  soldier_test.cpp  weapon_test.cpp
(+83 files in other folders)
